@@ -1641,6 +1641,10 @@ static const gchar *ui_description =
 "  </menubar>"
 "  <popup action='ContextMenu'>"
 "      <menuitem action='Homepage'/>"
+"      <separator name='ContextSep1'/>"
+"      <menuitem action='Cut'/>"
+"      <menuitem action='Copy'/>"
+"      <separator name='ContextSep1'/>"
 "  </popup>"
 "  <toolbar name='MainToolBar'>"
 "      <toolitem action='New'/>"
